less/room.less
/* ... */
#btn-upload {
  padding: 4px;
  width: 100%;
}

#btn-begin-dj, #btn-end-dj {
  display: none;
}

#songupload {
  visibility: hidden;
  height: 0;
  width: 0;
}

#listener-section, #dj-section {
  @user-height: 30px;

  .user {
    position: relative;
    height: @user-height;

    .li-container {
      position: absolute;
      left: 0;
      right: 0;
      top: 0;
      bottom: 0;
      overflow: hidden;
    }

    .name {
      padding-left: 5px;
      white-space: nowrap;
      overflow: hidden;
      line-height: @user-height;
    }

    .votes {
      background: @color-grey-background;
      position: absolute;
      right: 0;
      top: 0;
      bottom: 0;
      padding: 0 4px;
      @shadow: -5px 0px 27px 15px @color-grey-background;
      -webkit-box-shadow: @shadow;
      -moz-box-shadow: @shadow;
      box-shadow: @shadow;

      .vote {
        display: inline-block;
        margin-top: 5px;
        margin-right: 2px;
        position: relative;
        right: -20px;

        &.skipvote {
          color: @skipvote-color;
        }
      }
    }
  }
}

.mobile-top-controls {
  @top-controls-height: 40px;
  @top-padding: 500px;
  height: @top-controls-height;
  position: relative;
  background: @nav-background;
  margin: 10px -10px;
  margin-top: -@top-padding - 40px;
  display: none;
  border-bottom: solid 1px @color-grey-border;
  @box-shadow: 0 0 7px 0 darken(@color-grey-border, 5%);
  -webkit-box-shadow: @box-shadow;
  box-shadow: @box-shadow;
  padding-top: @top-padding;
  padding-bottom: @top-controls-height;

  .navbar-container {
    height: @top-controls-height;
    position: relative;
  }

  .username {
    position: absolute;
    @width: 50%;
    width: @width;
    left: 50%;
    top: 0;
    margin-left: -@width / 2;
    text-align: center;
    line-height: @top-controls-height;
    overflow: hidden;
    color: #777;
  }

  & > ul {
    position: absolute;
    bottom: 0;
  }

  .navbar-left {
    float: left;
  }

  .navbar-nav {
    margin: 0;

    a, a:link, a:hover, a:visited {
      color: #777;
      font-weight: bold;

      .glyphicon {
        position: relative;
        top: 2px;
      }
    }
  }

  @media only screen and (max-width: @single-col-width) {
    display: block;
  }
}

/* Firefox-only rules */
@-moz-document url-prefix() {
  .fixed-column .column-table .column-table-row .column-section {
    &, &:before, &:after {
      @box-sizing: padding-box;
      -webkit-box-sizing: @box-sizing;
      -moz-box-sizing: @box-sizing;
      box-sizing: @box-sizing;
    }
  }
}

